--- a/main.ipynb
+++ b/main.ipynb
@@ -323,6 +323,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "id": "342c7f42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('cat_dog_classifier_s.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "id": "f52b6ebc",
    "metadata": {},
